samples/_failures_safe/1761437266_689695_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb20ae06.c: In function ‘main’:
./samples/SAFE/__tmp_cb20ae06.c:176:9: error: expected expression at end of input
  176 |         if (strlen(input) != 2 ||
      |         ^~
./samples/SAFE/__tmp_cb20ae06.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb20ae06.c:176:9: error: expected declaration or statement at end of input
